// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View columns default render 1`] = `
<span
  data-for="table-tooltip"
  data-tip="Toggle Columns"
>
  <button
    className="btn-table"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fal fa-columns"
    />
  </button>
</span>
`;

exports[`View columns render with disable 1`] = `
<span
  data-for="table-tooltip"
  data-tip="Toggle Columns"
>
  <button
    className="btn-table"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <i
      className="fal fa-columns"
    />
  </button>
</span>
`;
